welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:10: error: value unary_! is not a member of Int
	    if(!estDosMur &&  !(getX() + getY())==6){
                              ^